# gears-rust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Gears.toml  Makefile  README.md  deny.toml  dylint.toml  release-plz.toml  rust-toolchain.toml
.cf-studio/: version.toml  whatsnew.toml
.cf-studio/config/: artifacts.toml  core.toml
.claude/skills/gear-creator/: SKILL.md
.claude/skills/modkit-pr-review/: SKILL.md
.github/workflows/: ci.yml  codeql.yml  gts-validation.yml  notify-docs.yml
config/: lint.yml
docs/: ARCHITECTURE_MANIFEST.md  WHY_GEARS.md
docs/api/: api.json
docs/arch/toolkit-contract-binding/: DESIGN.md
docs/arch/toolkit-oop/: DESIGN.md  PRD.md
docs/arch/toolkit-oop/ADR/: 0001-cpt-cf-adr-deployment-profiles.md  0002-cpt-cf-adr-rest-first-oop.md  0003-cpt-cf-adr-gateway-abstraction.md  0006-cpt-cf-adr-platform-plane-auth.md  0007-cpt-cf-adr-edge-architecture.md  0008-cpt-cf-adr-two-plane-auth.md
docs/pr-review/: modkit-rust-review.md
docs/slides/: 1_OVERVIEW.md
docs/toolkit_unified_system/: 02_gear_layout_and_sdk_pattern.md
docs/web-docs/: index.mdx
docs/web-docs/architecture/: index.md
docs/web-docs/concepts/: errors-and-types.md  gears-and-composition.mdx  index.md  runtime-and-lifecycle.md  security-and-tenancy.md
docs/web-docs/contributing/: contributor-guide.md  translation-guide.md
docs/web-docs/examples/: index.md
docs/web-docs/get-started/: index.md  your-first-gear.mdx
docs/web-docs/guides/: authorization.md  database.md  index.md  observability.md  odata.md  out-of-process.md
docs/web-docs/introduction/: index.md
docs/web-docs/reference/: index.md
gears/bss/ledger/ledger/: Cargo.toml
gears/chat-engine/chat-engine/: Cargo.toml
gears/chat-engine/chat-engine-sdk/: Cargo.toml
gears/chat-engine/docs/: DESIGN.md
gears/credstore/credstore/: Cargo.toml
gears/file-storage/: README.md
gears/file-storage/docs/: DESIGN.md  IMPLEMENTATION_PLAN_TEMP.txt  PRD.md  api.md  migration.sql
gears/file-storage/file-storage/: Cargo.toml
gears/file-storage/file-storage/src/: config.rs  config_tests.rs  gear.rs  gear_tests.rs
gears/file-storage/file-storage/src/api/rest/: dto.rs  handlers.rs  routes.rs
gears/file-storage/file-storage/src/domain/: authz.rs  cleanup.rs  error.rs  idempotency.rs  mod.rs  multipart_service.rs  policy_service.rs  ports.rs  service.rs
gears/file-storage/file-storage/src/domain/service/: backend.rs  create.rs  data_plane_port.rs  delete.rs  finalize.rs  migration.rs  mod.rs  read.rs  read_ops.rs  transfer.rs  update.rs  versioning.rs  write.rs
gears/file-storage/file-storage/src/infra/backend/: in_memory.rs  local_fs.rs  mod.rs  s3.rs  s3_tests.rs
gears/file-storage/file-storage/src/infra/content/: hash_mode.rs  hash_mode_tests.rs  mod.rs
gears/file-storage/file-storage/src/infra/storage/: mapper.rs  store.rs
gears/file-storage/file-storage/src/infra/storage/entity/: file_version.rs  idempotency_key.rs  mod.rs  version_hash_manifest.rs
gears/file-storage/file-storage/src/infra/storage/migrations/: m20260706_000001_idempotency_subject_id.rs  m20260706_000003_policies_unique_scope.rs  m20260707_000001_content_hash_modes.rs  mod.rs
gears/file-storage/file-storage/src/infra/storage/repo/: file_repo.rs  idempotency_repo.rs  multipart_repo.rs  version_repo.rs
gears/file-storage/file-storage/src/infra/storage/store/: files.rs  lifecycle.rs  metadata.rs  mod.rs  multipart.rs  policy.rs  traits.rs  versions.rs
gears/file-storage/file-storage/tests/: audit_test.rs  cleanup_test.rs  content_hash_modes_test.rs  enforce_test.rs  finalize_test.rs  idempotency_authz_test.rs  list_authz_test.rs  migration_test.rs  multipart_test.rs  policy_authz_test.rs  service_test.rs  usage_test.rs  version_repo_test.rs
gears/model-registry/docs/: DESIGN.md  PRD.md  UPSTREAM_REQS.md
gears/model-registry/model-registry-sdk/: Cargo.toml
gears/model-registry/model-registry-sdk/src/: api.rs  errors.rs  lib.rs
gears/model-registry/model-registry-sdk/src/models/: common.rs  default_parameters.rs  entity.rs  info.rs  mod.rs  provider_settings.rs  request.rs
gears/model-registry/model-registry-sdk/src/models/providers/: anthropic.rs  mod.rs  openai.rs
gears/system/cluster/cluster-conformance/: Cargo.toml  README.md
gears/system/cluster/cluster-conformance/src/: cache.rs  discovery.rs  fixture.rs  leader.rs  lib.rs  lock.rs  model.rs  restart.rs  watch_lifecycle.rs
gears/system/cluster/cluster-conformance/tests/: model.rs  self_test.rs
gears/system/cluster/plugins/standalone-cluster-plugin/: Cargo.toml  README.md
gears/system/cluster/plugins/standalone-cluster-plugin/src/: cache.rs  cache_tests.rs  config.rs  lib.rs  plugin.rs  provider.rs  provider_tests.rs
libs/rustls-corecrypto-provider/: Cargo.toml
libs/rustls-corecrypto-provider/src/: aead.rs  aead_tests.rs  hash.rs  hash_tests.rs  hkdf.rs  hkdf_tests.rs  hmac.rs  hmac_tests.rs  kx.rs  kx_tests.rs  oe.rs  oe_tests.rs  provider.rs  provider_tests.rs  tls12.rs  tls12_tests.rs  tls13.rs  tls13_tests.rs  verify.rs  verify_tests.rs
libs/rustls-fips-shim/: Cargo.toml
libs/toolkit-auth/: Cargo.toml
libs/toolkit-db/: Cargo.toml
libs/toolkit-db-macros/: Cargo.toml
libs/toolkit-db-macros/src/: lib.rs  scopable.rs
libs/toolkit-db/src/: config.rs  options.rs
libs/toolkit-db/tests/: config_tests.rs  manager_tests.rs  options_tests.rs  params_integration.rs  precedence_tests.rs
libs/toolkit-gts/: Cargo.toml
libs/toolkit-gts-macros/: Cargo.toml
libs/toolkit-gts/tests/: macro_integration.rs
libs/toolkit-macros/src/: lib.rs
libs/toolkit-odata-macros/: Cargo.toml
libs/toolkit-odata-macros/src/: lib.rs  odata_filterable.rs  odata_schema.rs
libs/toolkit-utils/src/: secret_string.rs
libs/toolkit/tests/: runner_tests.rs
studio-kit-gears/: SKILL.md
studio-kit-gears/scripts/: change-impact-analysis.toml
studio-kit-gears/workflows/: change-impact-analysis.md  decompose.md  doc-adr.md  doc-design.md  doc-feature.md  doc-prd.md  doc-upstream-reqs.md  implement.md
tools/scripts/: docs-preview.sh  md-fabric.py
(+227 files in other folders)
