[package]
name = "cf-gears-file-storage"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "File Storage gear (control plane): metadata, authorization, versioning, signed URLs"
# `src/bin/` also holds `sidecar_tests.rs`, the sidecar's out-of-line unit-test
# module (required by the `de1101_tests_in_separate_files` repo lint — see
# `#[path = "sidecar_tests.rs"] mod tests;` at the bottom of `sidecar.rs`).
# Cargo's bin-autodiscovery would otherwise treat that file as its own binary
# crate root; disable it and declare the real binary explicitly instead.
autobins = false

[lib]
name = "file_storage"

[[bin]]
name = "sidecar"
path = "src/bin/sidecar.rs"

[lints]
workspace = true

[features]
default = []

[dependencies]
# SDK - public API, models, and errors
cf-gears-file-storage-sdk = { path = "../file-storage-sdk" }

# Authorization Service (PEP) — per-type access decisions
cf-gears-authz-resolver-sdk = { path = "../../system/authz-resolver/authz-resolver-sdk" }

# Core dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }

# Serde and JSON schema
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true, features = ["time"] }

# HTTP and REST
axum = { workspace = true, features = ["macros"] }
http = { workspace = true }

# Time / IDs
time = { workspace = true }
uuid = { workspace = true }

# Content pipeline + signed URLs
bytes = { workspace = true }
futures = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
infer = "0.19"
ring = "0.17"

# HTTP client — used by the sidecar binary to call the control-plane finalize callback.
reqwest = { workspace = true }

url = { workspace = true }
# S3 storage backend (ADR-0005). Feature set determined empirically in Stage 0:
# `aws-lc-rs` reuses the crypto crate already resolved via hyper-rustls/reqwest's TLS
# stack (no second crypto crate added); `full` is required because rusty-s3 gates its
# `ListObjectsV2`/`CreateMultipartUpload`/`CompleteMultipartUpload` action *builders*
# behind that feature (not just their bundled response-parsing types) — see plan.md
# Risks §2 deviation note. We still parse all S3 XML response bodies ourselves via
# `quick-xml` per the ADR; rusty-s3's own `instant-xml`-based response types (e.g.
# `ListObjectsV2Response`) are never used, only its request-signing builders.
rusty-s3 = { workspace = true, features = ["aws-lc-rs", "full"] }
quick-xml = { workspace = true }

# Database - SeaORM (driver features come from toolkit-db)
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Metrics (P2 1.8 remediation) — OTel Meter method API, the platform's
# standardized facade (mirrors gears/mini-chat's infra/metrics.rs).
opentelemetry = { workspace = true }

# Local dependencies
toolkit = { workspace = true }
toolkit-db = { workspace = true, features = ["sqlite", "pg"] }
toolkit-db-macros = { workspace = true }
toolkit-security = { workspace = true }
toolkit-canonical-errors = { workspace = true, features = ["axum", "utoipa"] }
toolkit-macros = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
uuid = { workspace = true }
tower = { workspace = true }

# S3 backend test double (Stage 1+): an in-process, filesystem-backed S3-compatible
# HTTP server. Versions re-verified against crates.io in Stage 0 (matched pair).
s3s = "0.14.1"
s3s-fs = "0.14.1"
hyper = { workspace = true }
hyper-util = { workspace = true, features = ["server-auto", "tokio"] }
tempfile = { workspace = true }
