[package]
name = "cf-gears-model-registry-sdk"
description = "SDK for the Model Registry: API traits, models, and error definitions"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
metadata.docs.rs.all-features = true

[lib]
name = "model_registry_sdk"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
uuid = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true, features = ["chrono04"] }
toolkit-security = { workspace = true }
toolkit-odata = { workspace = true }
gts = { workspace = true }
gts-macros = { workspace = true }